<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_view_alpha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_alpha" />

            <Button
                android:id="@+id/btn_view_scale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_scale" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_view_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_translate" />

            <Button
                android:id="@+id/btn_view_rotate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_rotate" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="16dp"
        android:background="@android:color/darker_gray" />

    <ImageView
        android:id="@+id/iv_view_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/icon_android" />

</LinearLayout>